💄 invoice - fixed boxes alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1096,6 +1096,7 @@ footer .contact-info{
 }
 #invoice .grid-2{
     gap: 0 1em;
+    align-items: inherit;
 }
 
 @media print{
